# monorepo

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .prettierrc  CLAUDE.md  Dockerfile  Doxyfile  Makefile  README.md  actions.c  con_lib.c  config.server.json  core  hard.config.json  hard.example-config.json  index.html  monorepo.code-workspace  nginx.conf  package-lock.json  package.json  server.example-config.json  soft.config.json  soft.example-config.json  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: build-connection-lib.yaml  build-game-server.yaml  client_lib.yaml  connection-lib-Dockerfile  docker-build.yml  entrypoint.sh  game-server-Dockerfile  game.yml  my-core-bot-Dockerfile  my-core-bot.yaml  server-Dockerfile  server.yaml  server.yml  visualizer.yml
bots/gridmaster/: .gitignore  Makefile
bots/martin/: .gitignore  Makefile
client_lib/: .gitignore  Makefile
client_lib/inc/: core_lib.h  core_lib_internal.h  units.h
client_lib/src/: con_lib.c
data/: docker.game.config.json  docker.server.config.json  game.config.json  server.config.json
data/jigsaw-templates/: 7.txt  V.txt  X.txt  arch_3.txt  arrow.txt  arrow_angled.txt  core_c_small.txt  cross.txt  diamond.txt  floorplan_2.txt  glasses.txt  heart-filled.txt  money_stash_thick.txt  questionmark.txt  resource_stash.txt  resource_stash_thick.txt  space_defenders_1.txt  space_defenders_4.txt  swirl.txt  tetris_L.txt  tetris_S.txt  walled_resource_random.txt  water_drop.txt  wave.txt
data/scripts/: send_misc_to_rabbitmq.sh  upload_replay_to_s3.sh
docs/: README.md  docs.md  generate_docs.sh  generate_md_docs.py
getter/: get.c  get_core.c  get_resource.c  get_team.c  get_unit.c  get_unit_config.c  get_utils.c
helm/debug-visualizer/: values-dev.yaml  values-prod.yaml
inc/: Common.h  con_lib.h  core_lib.h  core_lib_internal.h  event_handler.h  get_next_line.h  json.h  parse_json.h  socket.h  utils.h
inc/action/: Action.h  AttackAction.h  BuildAction.h  CreateAction.h  MoveAction.h  TransferMoneyAction.h
inc/config/: Config.h
inc/entity/: Entity.h  Unit.h
inc/game/: Board.h  Config.h  Game.h  ReplayEncoder.h  Visualizer.h
inc/net/: Bridge.h
inc/object/: Bomb.h  Core.h  Money.h  Object.h  Resource.h  Unit.h  Wall.h
inc/utils/: Logger.h  Utils.h
json/: encode_json.c  encode_json_utils.c  formatter.c  get_next_line.c  parse_json.c  parse_json_configs.c  parse_json_objects.c  parse_json_utils.c
server/: .gitignore  CMakeLists.txt  Makefile
server/.github/workflows/: build-game-server.yaml
server/data/: game.config.json  server.config.json
server/data/config-schemas/: game-config.schema.json  server-config.schema.json
server/data/jigsaw-templates/: 1.txt  2_walled_resource_diag.txt  3_walled_resource.txt  arch.txt  arch_2.txt  arrow_2.txt  circle_resource.txt  core.txt  cross-thick.txt  floorplan.txt  hopper.txt  house.txt  minefield.txt  minefield_large.txt  shaft_bend_2.txt  shaft_straight_1.txt  straight_wall_tilted_1.txt  subtle_political_messaging.txt  tetris_5.txt  tetris_T.txt  walled_resource.txt  walled_resource_full.txt
server/inc/: Common.h
server/inc/action/: Action.h  AttackAction.h  BuildAction.h  CreateAction.h  MoveAction.h  TransferGemsAction.h  TransferMoneyAction.h
server/inc/config/: Config.h
server/inc/config/worldgen/: EmptyWorldGenerator.h  HardcodedWorldGenerator.h  SparseWorldGenerator.h  WorldGenerator.h
server/inc/config/worldgen/JigsawWorldGenerator/: JigsawWorldGenerator.h  MapTemplate.h
server/inc/game/: Board.h  Game.h  ReplayEncoder.h  StateEncoder.h  Stats.h  Visualizer.h
server/inc/net/: Bridge.h  Server.h
server/inc/object/: Bomb.h  Core.h  Deposit.h  GemPile.h  Money.h  Object.h  Resource.h  Unit.h  Wall.h
server/inc/utils/: Logger.h  Utils.h
server/misc/jigsaw-builder/: README.md  template_edit.html
server/src/: main.cpp
server/src/action/: Action.cpp  AttackAction.cpp  BuildAction.cpp  CreateAction.cpp  MoveAction.cpp  TransferGemsAction.cpp  TransferMoneyAction.cpp
server/src/config/: Config.cpp
server/src/config/worldgen/: DistancedResourceWorldGenerator.cpp  EmptyWorldGenerator.cpp  HardcodedWorldGenerator.cpp  SparseWorldGenerator.cpp
server/src/config/worldgen/JigsawWorldGenerator/: JigsawWorldGenerator.cpp  MapTemplate.cpp
server/src/game/: Board.cpp  Game.cpp  ReplayEncoder.cpp  StateEncoder.cpp  Stats.cpp  Visualizer.cpp
server/src/net/: Bridge.cpp  Server.cpp
server/src/object/: Bomb.cpp  Core.cpp  Deposit.cpp  GemPile.cpp  Money.cpp  Resource.cpp  Unit.cpp  Wall.cpp
server/src/utils/: Logger.cpp  flood_fill.cpp  random_string.cpp
src/: actions.c  con_lib.c  free.c  main.cpp  printing.c
src/Config/: Config.cpp
src/action/: Action.cpp  AttackAction.cpp  BuildAction.cpp  CreateAction.cpp  (+2 more)
utils/: error.c  init_con_utils.c  print_utils.c  socket.c  utils.c
visualizer/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
wiki/: 1_game.md  2_objects.md  3_actions.md  4_configs.md  5_getters.md  6_printing.md  README.md
(+259 files in other folders)
